/*
 * This file is part of rasdaman community.
 *
 * Rasdaman community is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Rasdaman community is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with rasdaman community.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013,
 *2014 Peter Baumann / rasdaman GmbH.
 *
 * For more information please see <http://www.rasdaman.org>
 * or contact Peter Baumann via <baumann@rasdaman.com>.
 */

syntax = "proto3";
//The first line must specify the syntax.
package rasnet.service;

option java_package = "org.rasdaman.rasnet.service";

option cc_generic_services = false;
option java_generic_services = false;

message ErrorMessage
{
    uint32 error_no = 1;
    int32 kind = 2;
    string error_text = 3;

    enum ErrorMessageType
    {
        RERROR = 0;
        STL = 1;
        UNKNOWN = 2;
    }

    ErrorMessageType type = 4;
}
